// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inputTags > renders with ariaLabel correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" aria-label="Aria label" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with as correctly 1`] = `
"<section data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</section>"
`;

exports[`inputTags > renders with class correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with default slot correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">Default slot
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with defaultValue correctly 1`] = `
"<div data-slot="root" dir="ltr">
  <div data-slot="item" class="" data-akar-collection-item="" aria-labelledby="akar-tags-input-item-text-v-0" aria-current="false" data-state="inactive"><span id="akar-tags-input-item-text-v-0" data-slot="itemText" class="">test</span><button tabindex="-1" aria-labelledby="akar-tags-input-item-text-v-0" aria-current="false" data-state="inactive" type="button" data-slot="itemDelete" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemDeleteIcon" class=""></svg></button></div><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with disabled correctly 1`] = `
"<div data-slot="root" dir="ltr" data-disabled=""><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" disabled="" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with icon correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input"><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></span>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with id correctly 1`] = `
"<div data-slot="root" dir="ltr"><input id="id" type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with item-delete slot correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with item-text slot correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with leading slot correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input"><span data-slot="leading" class="">Leading slot</span>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with loading correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input"><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></span>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with loading trailing correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if--><span data-slot="trailing" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></span>
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with loadingIcon correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input"><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></span>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with modelValue correctly 1`] = `
"<div data-slot="root" dir="ltr">
  <div data-slot="item" class="" data-akar-collection-item="" aria-labelledby="akar-tags-input-item-text-v-0" aria-current="false" data-state="inactive"><span id="akar-tags-input-item-text-v-0" data-slot="itemText" class="">test</span><button tabindex="-1" aria-labelledby="akar-tags-input-item-text-v-0" aria-current="false" data-state="inactive" type="button" data-slot="itemDelete" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="itemDeleteIcon" class=""></svg></button></div><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with name correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with neutral variant ghost correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with neutral variant ghost highlight correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with neutral variant none correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with neutral variant none highlight correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with neutral variant outline correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with neutral variant outline highlight correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with neutral variant soft correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with neutral variant soft highlight correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with neutral variant subtle correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with neutral variant subtle highlight correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with placeholder correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" placeholder="Search..." data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with primary variant ghost correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with primary variant ghost highlight correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with primary variant none correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with primary variant none highlight correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with primary variant outline correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with primary variant outline highlight correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with primary variant soft correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with primary variant soft highlight correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with primary variant subtle correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with primary variant subtle highlight correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with required correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with size lg correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with size md correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with size sm correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with size xl correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with size xs correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with trailing and icon correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if--><span data-slot="trailing" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></span>
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with trailing slot correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if--><span data-slot="trailing" class="">Trailing slot</span>
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with trailingIcon correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if--><span data-slot="trailing" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></span>
  <!--v-if-->
</div>"
`;

exports[`inputTags > renders with ui correctly 1`] = `
"<div data-slot="root" dir="ltr"><input type="text" autocomplete="off" autocorrect="off" autocapitalize="off" data-slot="input">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;
